--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,13 +1,13 @@
 body {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  background-color: black;
+  background-color: rgb(0, 162, 255);
 }
 
 li {
   padding: 5px;
   margin: 5px;
   background: #faebd7;
-  color: black;
+  color: rgb(0, 162, 255);
 }
 
 .label {
